# lead

./: README.md  docker-compose.yml
back/: .env  Cargo.toml
back/src/: controller.rs  main.rs  redis_adapter.rs  redis_conn.rs
front/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
front/src/: Leaderboard.jsx  index.css  index.jsx
test/: locustfile.py
