[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix-rt = "2.9.0"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
redis = "0.25.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
rand = "0.8.5"

